FTL doesn't observe the use kind of CheckIsConstant's child1 https://bugs.webkit.org/show_bug.cgi?id=210763

Reviewed by Yusuke Suzuki.

Somehow, this didn't get added when I changed CheckIsConstant and didn't show up
when I tested r260377 because I tested in release. Fortunately, the produced
DFG IR will be the same.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileCheckIsConstant):


Canonical link: https://commits.webkit.org/223652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260397 268f45cc-cd09-0410-ab3c-d52691b4dbfc